Replace Command with batched Txns